# blog

./: .gitignore  README.md  _quarto.yml  about.qmd  config.toml  index.qmd  migrate.py  pyproject.toml
.github/workflows/: build-and-deploy.yml
bl/posts/excited-about/: excited-about.qmd
bl/posts/python-concurrency/: python-concurrency.qmd
bl/posts/resume/: resume.qmd
bl/posts/uncover-covid/: uncover-covid.qmd
content/: _index.md  betting-theory.md  ppl.md  python-concurrency.md  resume.md  static-blog.md
content/posts/: _index.md  bayes.md  betting-theory.md  compiler-1.md  excited-about.md  need-for-speed.md  post-0.md  ppl.md  python-concurrency.md  resume.md  static-blog.md  uncover-covid.md  vae.md
posts/: _metadata.yml  ppl.md
posts/bayes/: bayes.qmd  index.qmd
posts/bets-case/: .gitignore  index.qmd  premier_league_odds_processed.parquet
posts/bets-nba/: .env.example  .gitignore  index.qmd  odds-doc.html
posts/betting-theory/: betting-theory.qmd  chips_poker.avif  index.qmd
posts/compiler-1/: compiler-1.qmd  index.qmd
posts/excited-about/: index.qmd
posts/housing/: index.qmd
posts/intro-ppl/: index.qmd
posts/need-for-speed/: index.qmd
posts/python-concurrency/: index.qmd
posts/resume/: index.qmd
posts/static-blog/: index.qmd  static-blog.qmd
posts/uncover-covid/: index.qmd
posts/vae/: vae.md
public/: deep-thought.css  search_index.en.js
templates/: anchor-link.html
themes/DeepThought/content/posts/: post-3.md
themes/DeepThought/templates/: base.html  macros.html  page.html
